js262/test/language/module-code/top-level-await/no-operand.js


/*---
esid: prod-AwaitExpression
description: >
  await requries an operand.
negative:
  phase: parse
  type: SyntaxError
flags: [module]
features: [top-level-await]
---*/

$DONOTEVALUATE();

await;
